# portaplotty

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/portaplotty/: cli.py  server.py
src/portaplotty/core/: activity.py  discover.py  identify.py  launchd.py  memory.py  models.py
tests/: test_activity.py  test_identify.py  test_memory.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  DetailDrawer.tsx  ServiceCard.tsx  Sparkline.tsx  api.ts  styles.css  types.ts
