[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portaplotty"
version = "0.1.0"
description = "Find what's listening on ports on your Mac, and figure out which app each one is."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jay Sherman", email = "jsherman999@gmail.com" }]
dependencies = [
    "psutil>=5.9",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "httpx2>=0.28",
]

[project.scripts]
portaplotty = "portaplotty.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portaplotty"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
